@@ -14,7 +14,7 @@ Stefan Morrell
 Jon Bagshaw
     Working with Stefan on Lacandon Conquest
 Tom Alsen (aka Tzarg)
-    Implementation of the FIND ALL order
+    Implementation of the FIND ALL order, and a new combat system
 Ben Lloyd
     Bugfixes and suggestions, and code to implement some of them.
 Georg Gottschalk
